Updating with new content

--- a/Le100FiabeECanzoncine/Le100FiabeECanzoncine.csproj
+++ b/Le100FiabeECanzoncine/Le100FiabeECanzoncine.csproj
@@ -160,4 +160,7 @@
       <Visible>False</Visible>
     </XamarinComponentReference>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\VideoResources.txt" />
+  </ItemGroup>
 </Project>
