--- a/Le100FiabeECanzoncine/Le100FiabeECanzoncine.csproj
+++ b/Le100FiabeECanzoncine/Le100FiabeECanzoncine.csproj
@@ -145,6 +145,7 @@
     <AndroidResource Include="Resources\drawable-xhdpi\favolesenzatempo.jpg" />
     <AndroidResource Include="Resources\layout\VideoViewer.axml" />
     <AndroidResource Include="Resources\layout\TabContent.axml" />
+    <AndroidResource Include="Resources\drawable-xhdpi\AppIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
@@ -155,12 +156,12 @@
     <Folder Include="Resources\drawable-xxxhdpi\" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\100FiabeECanzoncine.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <XamarinComponentReference Include="googleplayservices">
       <Version>25.0.0.0</Version>
       <Visible>False</Visible>
     </XamarinComponentReference>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidAsset Include="Assets\VideoResources.txt" />
   </ItemGroup>
 </Project>
