--- a/Le100FiabeECanzoncine/Properties/AndroidManifest.xml
+++ b/Le100FiabeECanzoncine/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.damicolo.le100fiabeecanzoncine">
 	<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="21" />
-	<application android:label="Le 100 Fiabe e Canzoncine" android:icon="@drawable/favolesenzatempo">
+	<application android:label="Le 100 Fiabe e Canzoncine" android:icon="@drawable/appicon">
 		<!--This meta-data tag is required to use Google Play Services.-->
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<activity android:name="com.google.android.gms.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:theme="@android:style/Theme.Translucent" />
